--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animación</title>
+    <title>Página web</title>
+    <link rel="shortcut icon" href="img/miicono.png" type="image/x-icon">
     <link rel="stylesheet" href="estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
@@ -14,9 +15,9 @@
         <img class="hamburguer" src="img/hamburguesa.svg" alt="">
         <nav class="menu-navegacion">
                 <a href="#inicio">Inicio</a>
-                <a href="#servicio">Servcio</a>
+                <a href="#servicio">Servicio</a>
                 <a href="#galeria">Portafolio</a>
-                <a href="#expertos">Servicios</a>
+                <a href="#expertos">Especializados</a>
                 <a href="#footer">Contacto</a>
         </nav>
         <div class="contenedor head">
@@ -59,16 +60,21 @@
                 </div>
             </div>
         </section>
+
+
         <div class="imagen-light">
             <img src="img/close.svg" alt="" class="close">
             <img src="" alt="" class="agregar-imagen">
         </div>
+
+
+
         <section class="contenedor" id="expertos">
             <h2 class="subtitulo">Expertos en:</h2>
             <section class="experts">
                 <div class="cont-expert">
                     <img src="img/pie_chart.svg" alt="">
-                    <h3 class="n-expert">Analytics</h3>
+                    <h3 class="n-expert">Análisis</h3>
                 </div>
                 <div class="cont-expert">
                     <img src="img/search_engine.svg" alt="">
@@ -76,16 +82,21 @@
                 </div>
                 <div class="cont-expert">
                     <img src="img/security.svg" alt="">
-                    <h3 class="n-expert">Security</h3>
+                    <h3 class="n-expert">Seguridad</h3>
                 </div>
             </section>
         </section>
+        <div class="svg-wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
+            style="height: 100%; width: 100%;">
+            <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                style="stroke: none; fill: #6441A5;"></path>
+        </svg></div>
     </main>
 
     <footer id="footer">
         <div class="contenedor footer-content">
                 <div class="contact-us">
-                    <h2 class="brand">AlexCG Design</h2>
+                    <h2 class="brand">DevWeb</h2>
                     <p>Somos expertos en la creación de tus sueños</p>
                 </div>
                 <div class="social-media">
